--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "lite-server",
-    "json": "json-server -p 5629 db/db.json",
-    "start": "npm run serve | npm run json"
+    "serve" : "lite-server",
+    "json"  : "json-server -p 5629 db/db.json",
+    "start" : "npm run serve | npm run json",
+    "test"  : "./node_modules/.bin/mocha"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "jquery": "^3.5.1",
     "json-server": "^0.16.3",
     "lite-server": "^2.6.1"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1"
   }
 }
