--- a/package.json
+++ b/package.json
@@ -1,48 +1,31 @@
 {
-  "name": "TPsidel",
+  "name": "jpgsidel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "d3": "^6.3.0",
+    "jasmine": "^3.6.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "mocha-simple-html-reporter": "^1.1.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.1.2"
+  },
+  "devDependencies": {},
   "scripts": {
-    "serve": "lite-server",
-    "json": "json-server -p 5629 db/db.json",
-    "start": "npm run serve | npm run json",
-    "servets": "lite-server --baseDir=./dist",
-    "init":"tsc -init",
-    "build":"tsc --build tsconfig.json",
-    "test": "./node_modules/.bin/mocha -r esm test/init.js ",
-    "test2": "./node_modules/.bin/mocha --require @babel/register test/init.js",
-    "test3": "karma start --require @babel/register --single-run --browsers ChromeHeadless karma.conf.js"
+    "start": "lite-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/champix56/jpgsidel.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "esm": "^3.2.25",
-    "grunt": "^1.3.0",
-    "jquery": "^3.5.1",
-    "jsdom": "^16.4.0",
-    "json-server": "^0.16.3",
-    "lite-server": "^2.6.1",
-    "mocha-simple-html-reporter": "^1.1.0",
-    "node-fetch": "^2.6.1"
+  "bugs": {
+    "url": "https://github.com/champix56/jpgsidel/issues"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/register": "^7.12.1",
-    "chai": "^4.2.0",
-    "isomorphic-fetch": "^3.0.0",
-    "jasmine": "^3.6.3",
-    "karma": "^5.2.3",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.1",
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.6",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.1.2"
-  }
+  "homepage": "https://github.com/champix56/jpgsidel#readme"
 }
